# algofun

./: CMakeLists.txt  README.md
Debug/: algofun  objects.mk
Debug/src/: expl_instance.d  parser.d  sort.d  subdir.mk
Debug/tests/: subdir.mk  test.d
Release/: algofun  makefile  sources.mk
Release/src/: expl_instance.d  subdir.mk
Release/tests/: subdir.mk  test.d
include/: base_node.h  dheap.h  for_testing.h  parser.h  queue.h  sort.h  stack.h
src/: dheapdef.hpp  expl_instance.cpp  parser.cpp  queuedef.hpp  sort.cpp  stackdef.hpp
tests/: dheap_test.h  parser_test.h  queue_test.h  sorting_test.h  stack_test.h  test.cpp
